Selenium rc3 is back as a nuget dependency

--- a/src/Coypu.Drivers.Tests/packages.config
+++ b/src/Coypu.Drivers.Tests/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="nspec" version="0.9.41" />
+  <package id="Castle.Core" version="2.5.2" />
+  <package id="SeleniumDotNet-2.0RC" version="3.0.0.0" />
 </packages>
