--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Coypu\packages.config" />
   <repository path="..\Coypu.Drivers.Tests\packages.config" />
+  <repository path="..\Coypu.AcceptanceTests\packages.config" />
 </repositories>
