Refactoring around timings

--- a/src/Coypu.AcceptanceTests/Coypu.AcceptanceTests.csproj
+++ b/src/Coypu.AcceptanceTests/Coypu.AcceptanceTests.csproj
@@ -74,10 +74,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Examples.cs" />
+    <Compile Include="ApiExamples.cs" />
     <Compile Include="RawWebdriver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Coypu.cs">
+    <Compile Include="ExternalExamples.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
